[tool.poetry]
name = "repl-nix-login"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]
readme = "README.md"
packages = [{include = "repl_nix_login"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
bcrypt = "^4.1.2"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
